--- a/lib/realworld_web/templates/layout/live.html.leex
+++ b/lib/realworld_web/templates/layout/live.html.leex
@@ -2,12 +2,12 @@
   <p id="alert-success" class="text-white bg-green-700 alert toast" role="alert"
     phx-click="lv:clear-flash"
     phx-hook="InitToast"
-    phx-value-key="info"><%= get_flash(@flash, :info) %></p>
+    phx-value-key="info"><%= live_flash(@flash, :info) %></p>
 
   <p id="alert-error" class="text-white bg-red-700 alert toast" role="alert"
     phx-click="lv:clear-flash"
     phx-hook="InitToast"
-    phx-value-key="error"><%= get_flash(@flash, :error) %></p>
+    phx-value-key="error"><%= live_flash(@flash, :error) %></p>
 
   <%= @inner_content %>
 </main>
